# uk-law-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: __init__.py  bailii.py  caselaw.py  codes_of_practice.py  companies_house.py  court_rules.py  forms.py  guidance.py  international.py  land_registry.py  legislation.py  ombudsman.py  parliament.py  planning.py  practice_directions.py  regulators.py  server.py  sos_decisions.py
