[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uk-law-mcp"
version = "0.1.0"
description = "MCP server for free official UK legal sources"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sarah Okafor"}
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
    "lxml>=4.9.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
